--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -1,11 +1,9 @@
 logging:
-  level: debug
+  level:
+    com.example.blog: debug
+    com.example.blog.scheduled: info
   file:
     path: /logs/
-  pattern:
-    console: %d{yyyy-MM-dd} [%thread] %-5level %logger{50} -%msg%n
-    file: d{yyyy-MM-dd} [%thread] %-5level %logger{50} -%msg%n
-
 spring:
   application:
     name: blog
@@ -20,3 +18,5 @@ spring:
     host: 101.33.208.159
     port: 6799
     password: 4Y1c2x78
+server:
+  port: 8888
