--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -5,11 +5,19 @@ spring:
 
   datasource:
     hikari:
-      max-lifetime: 1200000
+      auto-commit: true
+      #空闲连接超时时长
+      idle-timeout: 60000
+      #连接超时时长
+      connection-timeout: 60000
+      #最大生命周期，0不过期
+      max-lifetime: 0
+      #最小空闲连接数
+      minimum-idle: 10
+      #最大连接数量
       maximum-pool-size: 10
-      connection-timeout: 300000
-      minimum-idle: 5
     type: com.zaxxer.hikari.HikariDataSource
+
 
   redis:
     jedis:
